--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
   </body>
 </html>
